--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-27  Roger Sayle  <roger@eyesopen.com>
+
+	* config/d30v/d30v.h: Remove commented out STACK_REGS #defines.
+	* config/stormy16/stormy16.h: Likewise.
+
+	* config/stormy16/stormy16.h (CUMULATIVE_ARGS): Replace typedef
+	with #define.
+
 2002-06-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/install.texi (Binaries): Add Sinix/Reliant Unix.  Move
