--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-27  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* acinclude.m4: Fix last checkin.
+	* aclocal.m4: Regenerate.
+	* configure: Regenerate.
+
 2002-06-25  DJ Delorie  <dj@redhat.com>
 
 	* acinclude.m4 (GLIBCPP_CONFIGURE): Split out
