re PR c++/6695 (Regression: template friend declaration doesn't work)
	PR c++/6695
	* pt.c (tsubst_friend_class): Substitute into the context of the
	friend before using it.

	PR c++/6695
	* g++.dg/template/friend7.C: New file.

From-SVN: r55041

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-27  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/6695
+	* pt.c (tsubst_friend_class): Substitute into the context of the
+	friend before using it.
+
 2002-06-26  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (xref_tag): Change prototype.
