--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-27  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.c (rs6000_override_options): Move
+        *SUBTARGET_OVERRIDE_OPTIONS before the -m options.
+
 2002-06-27  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.md: Give "*xxx" names to all unnamed insn's.
