PR ada/7144 	* Makefile.in: Fix typo in comment, patch by Adrian Knoth 	<adi@thur.de>.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55056 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-28  Andreas Jaeger  <aj@suse.de>
+
+	PR ada/7144
+	* Makefile.in: Fix typo in comment, patch by Adrian Knoth
+	<adi@thur.de>.
+
 2002-06-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (SHELL): Set to @SHELL@.
