--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-08  Bernd Schmidt  <bernds@redhat.com>
+
+	* emit-rtl.c (gen_lowpart_common): Don't create paradoxical FLOAT_MODE
+	subregs.
+	* recog.c (general_operand, register_operand): Disallow them.
+
 2002-06-27  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.h (ASM_OUTPUT_POOL_PROLOGUE): Pass
