--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-28  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.h (FUNCTION_PROFILER): Respect flag_pic
+	when generating the call to _mcount.
+	(NO_PROFILE_COUNTERS): Define.
+
 2001-06-08  Bernd Schmidt  <bernds@redhat.com>
 
 	* emit-rtl.c (gen_lowpart_common): Don't create paradoxical FLOAT_MODE
