--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-28  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.h (RETURN_IN_MEMORY): Update comment.
+
 2001-06-08  Bernd Schmidt  <bernds@redhat.com>
 
 	* emit-rtl.c (gen_lowpart_common): Don't create paradoxical FLOAT_MODE
