2002-06-28  Aldy Hernandez  <aldyh@redhat.com>
        * config/rs6000/rs6000.c: Remove unusued variables from last
        patch.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55069 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-28  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.c: Remove unusued variables from last
+        patch.
+
 2002-06-27  Aldy Hernandez  <aldyh@redhat.com>
 
 	Revert:
