--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-28  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* config/m68hc11/m68hc11.md ("*addsi3"): Use 'o' constraint to
+	avoid the auto increment addressing modes.
+	("*subsi3"): Likewise.
+	(split for add/sub on address): For 68HC12 push the value on 
+	the stack and do the operation with a pop.
+
 2002-06-28  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cpplib.c (_cpp_handle_directive): Move #define-specific
