--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-28  Stephen Clarke  <stephen.clarke@superh.com>
+
+	* combine.c (combine_simplify_rtx): Pass the mode of the
+	shift count, not the shift operation when trying to simplify
+	a shift on a SHIFT_COUNT_TRUNCATED target.
+
 2002-06-28  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* config/m68hc11/m68hc11.md ("*addsi3"): Use 'o' constraint to
