2002-06-28  Phil Edwards  <pme@gcc.gnu.org>
	* configure.in (gcc_gxx_include_dir):  Change to match versioned
	C++ headers if --enable-version-specific-runtime-libs is used.
	* configure:  Regenerate.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55088 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-28  Phil Edwards  <pme@gcc.gnu.org>
+
+	* configure.in (gcc_gxx_include_dir):  Change to match versioned
+	C++ headers if --enable-version-specific-runtime-libs is used.
+	* configure:  Regenerate.
+
 2002-06-28  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (gcse_emit_move_after): Use gen_move_insn to produce the move.
