2002-06-28  Aaron Lehmann  <aaronl@vitelus.com>
        * fold-cont.c: Remove unused CHARMASK.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55106 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-28  Aaron Lehmann  <aaronl@vitelus.com>
+
+        * fold-cont.c: Remove unused CHARMASK.
+
 2002-06-29  Neil Booth  <neil@daikokuya.co.uk>
 
 	PR preprocessor/7150
