--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-29  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.md (ctrdi): Allocate pseudo for FPR
+	constraint in define_expand, not splitter.
+	Formatting.
+
 2002-06-29  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/i386/i386.c (ix86_init_mmx_sse_builtins): Use
