--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-30  Alan Modra  <amodra@bigpond.net.au>
+
+	* unroll.c (loop_iterations): Handle EQ loops.
+
 2002-06-29  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.md (ctrdi): Allocate pseudo for FPR
