--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gengtype.c (oprintf): Move VA_CLOSE after all fixedarg uses.
+
 2002-06-30  Alan Modra  <amodra@bigpond.net.au>
 
 	* unroll.c (loop_iterations): Handle EQ loops.
