--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-30  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.md (ctrdi): Allocate pseudo for FPR
+	constraint in define_expand, not splitter.
+
 2002-06-28  Phil Edwards  <pme@gcc.gnu.org>
 
 	* configure.in (gcc_gxx_include_dir):  Change to match versioned
