* cpptrad.c (skip_whitespace): Pass pointer to prior char. testsuite: 	* gcc.dg/cpp/trad/escaped-nl.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55135 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-01  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/trad/escaped-nl.c: New test.
+
 2002-06-30  Devang Patel  <dpatel@apple.com>
 
 	* objc.dg/fsyntax-only.m: New test.
