--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-01  Neil Booth  <neil@daikokuya.co.uk>
+
+	* cpptrad.c (skip_whitespace): Pass pointer to prior char.
+
 2002-07-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* mips.h (FUNCTION_ARG_REGNO_P): Fix parentheses.
