--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul  1 12:51:05 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* gcc.c-torture/execute/arith-rand-ll.c: New test.
+
 2002-07-01  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/trad/escaped-nl.c: New test.
