Remove references to building emacs from top level Makefile.in.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55138 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-01  Nathanael Nerode <neroden@twcny.rr.com>
+
+	* Makefile.in: Eliminate references to building emacs.
+
 2002-06-28  Graham Stott  <graham.stott@btinternet.com>
 
 	* MAINTAINERS: Update my email address.
