--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-01  Aldy Hernandez  <aldyh@redhat.com>
+
+        * tree.c (build_function_type_list): Update function comment.
+        Rename first argument to return_type.
+
 2002-07-01  Neil Booth  <neil@daikokuya.co.uk>
 
 	* Makefile.in: Remove all trace of tradcpp.c, tradcpp.h,
