--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2002-07-01  Stan Shebs  <shebs@apple.com>
+
+	* lib/objc.exp (objc_target_compile): Add the -I path to ObjC
+	header here...
+	* lib/objc-torture.exp (objc-torture-compile): ...instead of here
+	(objc-torture-execute): or here.
+
 Mon Jul  1 12:51:05 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* gcc.c-torture/execute/arith-rand-ll.c: New test.
