--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-01  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/7177
+	* gcc.c-torture/compile/20020701-1.c: New test.
+
 2002-07-01  Stan Shebs  <shebs@apple.com>
 
 	* lib/objc.exp (objc_target_compile): Add the -I path to ObjC
