re PR target/7177 (cris-axis-elf: ICE at -O2, unrecognized insn, sign-extend mem)
	PR target/7177
	* gcc.c-torture/compile/20020701-1.c: New test.

From-SVN: r55145

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-01  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/7177
+	* gcc.c-torture/compile/20020701-1.c: New test.
+
 2002-06-27  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/Wunknownprag.c: New tests.
